# parselnk-rs

./: Cargo.toml  README.md
examples/: absolute.rs  commander.rs  firefox.rs  notepad.rs  parse.rs  target.rs
src/: error.rs  header.rs  lib.rs  link_info.rs  link_target_id_list.rs  string_data.rs
src/extra_data/: console_data_block.rs  console_fe_data_block.rs  darwin_data_block.rs  environment_variable_data_block.rs  icon_environment_data_block.rs  known_folder_data_block.rs  mod.rs  property_store_data_block.rs  shim_data_block.rs  special_folder_data_block.rs  tracker_data_block.rs  vista_and_above_id_list_data_block.rs
test_data/: commander.lnk  firefox.lnk  notepad.lnk  outlook_express.lnk
