[package]
name = "parselnk"
version = "0.1.0"
authors = ["rustysec <rustysec@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rustysec/parselnk-rs"
description = "Parse windows .lnk files in pure rust"
readme = "README.md"
homepage = "https://github.com/rustysec/parselnk-rs"
documentation = "https://docs.rs/parselnk"
keywords = ["windows", "lnk", "link"]

[dependencies]
bitflags = "1"
byteorder = "1"
chrono = { version = "0.4", optional = true }
thiserror = "1"
widestring = "0.4"

[features]
default = [ "chrono" ]
